--- a/Double_DQN_Breakout_v0.ipynb
+++ b/Double_DQN_Breakout_v0.ipynb
@@ -21,8 +21,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[33m\r0% [Working]\u001b[0m\r            \rHit:1 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
             "\u001b[33m\r0% [Connecting to security.ubuntu.com (185.125.190.36)] [Connected to cloud.r-p\u001b[0m\u001b[33m\r0% [1 InRelease gpgv 242 kB] [Waiting for headers] [Waiting for headers] [Conne\u001b[0m\r                                                                               \rGet:2 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
@@ -81,12 +81,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "! wget http://www.atarimania.com/roms/Roms.rar\n",
-        "! mkdir /content/ROM/\n",
-        "! unrar e /content/Roms.rar /content/ROM/\n",
-        "! python -m atari_py.import_roms /content/ROM/"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -94,11 +89,10 @@
         "id": "89jIddy9hnS6",
         "outputId": "6854f368-230f-4b40-997a-4da132db52ea"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--2022-05-07 17:18:46--  http://www.atarimania.com/roms/Roms.rar\n",
             "Resolving www.atarimania.com (www.atarimania.com)... 195.154.81.199\n",
@@ -5071,6 +5065,12 @@
             "copying carnival.bin from /content/ROM/Carnival (1982) (Coleco - Woodside Design Associates, Steve 'Jessica Stevens' Kitchen) (2468) ~.bin to /usr/local/lib/python3.7/dist-packages/atari_py/atari_roms/carnival.bin\n"
           ]
         }
+      ],
+      "source": [
+        "! wget http://www.atarimania.com/roms/Roms.rar\n",
+        "! mkdir /content/ROM/\n",
+        "! unrar e /content/Roms.rar /content/ROM/\n",
+        "! python -m atari_py.import_roms /content/ROM/"
       ]
     },
     {
@@ -5136,14 +5136,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(210, 160, 3)"
             ]
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -5162,14 +5162,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "4"
             ]
           },
+          "execution_count": 8,
           "metadata": {},
-          "execution_count": 8
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -5188,14 +5188,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "True"
             ]
           },
+          "execution_count": 9,
           "metadata": {},
-          "execution_count": 9
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -5238,14 +5238,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(210, 160, 3)"
             ]
           },
+          "execution_count": 11,
           "metadata": {},
-          "execution_count": 11
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -5318,6 +5318,8 @@
       },
       "outputs": [],
       "source": [
+        "# Establecemos una función para la politica de seleccion de accion\n",
+        "# Esta función la usaremos a la hora de generar experiencia unicamente\n",
         "def epsilon_greedy_policy(state, epsilon=0):\n",
         "    if np.random.rand() < epsilon:\n",
         "        return np.random.randint(4)\n",
@@ -5334,8 +5336,7 @@
       },
       "outputs": [],
       "source": [
-        "from collections import deque\n",
-        "\n",
+        "# Establecemos container de longitud maxima 200000\n",
         "replay_memory = deque(maxlen=200000)"
       ]
     },
@@ -5348,8 +5349,11 @@
       "outputs": [],
       "source": [
         "def sample_experiences(batch_size):\n",
+        "    # Escogemos n = batch_size de indices de forma aleatoria\n",
         "    indices = np.random.randint(len(replay_memory), size=batch_size)\n",
+        "    # Definimos el conjunto de batch con los indices obtenidos\n",
         "    batch = [replay_memory[index] for index in indices]\n",
+        "    # Sacamos los datos de la memoria del conjunto de batch \n",
         "    states, actions, rewards, next_states, dones = [\n",
         "        np.array([experience[field_index] for experience in batch])\n",
         "        for field_index in range(5)]\n",
@@ -5365,8 +5369,11 @@
       "outputs": [],
       "source": [
         "def play_one_step(env, state, epsilon):\n",
+        "    # Tomamos una acción siguiendo la política establecida\n",
         "    action = epsilon_greedy_policy(state, epsilon)\n",
+        "    # Guardamos los datos obtenidos tras tomar esa accion\n",
         "    next_state, reward, done, info = env.step(action)\n",
+        "    # Añadimos la lista a la memoria\n",
         "    replay_memory.append((state, action, reward, next_state, done))\n",
         "    return next_state, reward, done, info"
       ]
@@ -5380,15 +5387,22 @@
       "outputs": [],
       "source": [
         "def training_step(batch_size,episode):\n",
+        "    # Sacamos las experiencias del conjunto aleatorio de batch de tamaño \n",
+        "    # de batch size.\n",
         "    experiences = sample_experiences(batch_size)\n",
         "    states, actions, rewards, next_states, dones = experiences\n",
+        "    # Sacamos los Q-valores de los proximos estados y tomamos los que \n",
+        "    # maximizan en la red de predict\n",
         "    next_Q_values = model_predict.predict(next_states)\n",
         "    best_next_actions = np.argmax(next_Q_values, axis=1)\n",
+        "    # Sacamos las acciones que se toman en cada momento\n",
         "    next_mask = tf.one_hot(best_next_actions, n_outputs).numpy()\n",
+        "    # Sacamos el valor de target_Q_values\n",
         "    next_best_Q_values = (model_target.predict(next_states) * next_mask).sum(axis=1)\n",
         "    target_Q_values = (rewards + \n",
         "                       (1 - dones) * discount_rate * next_best_Q_values)\n",
         "    target_Q_values = target_Q_values.reshape(-1, 1)\n",
+        "    # Actualizamos los pesos de la red de predict\n",
         "    mask = tf.one_hot(actions, n_outputs)\n",
         "    with tf.GradientTape() as tape:\n",
         "        all_Q_values = model_predict(states)\n",
@@ -5396,6 +5410,8 @@
         "        loss = tf.reduce_mean(loss_fn(target_Q_values, Q_values))\n",
         "    grads = tape.gradient(loss, model_predict.trainable_variables)\n",
         "    optimizer.apply_gradients(zip(grads, model_predict.trainable_variables))\n",
+        "    # Si el modulo 20 del episodio donde nos encontramos es igual a 0 \n",
+        "    # actualizamos los pesos de la red de target por los de la de predict\n",
         "    if episode % 20 == 0: \n",
         "        model_target.set_weights(model_predict.get_weights())"
       ]
